--- a/formacoes/android/Agenda/app/src/main/res/layout/activity_form_student.xml
+++ b/formacoes/android/Agenda/app/src/main/res/layout/activity_form_student.xml
@@ -1,34 +1,35 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:orientation="vertical">
-  
-    <EditText android:id="@+id/activity_form_student_name"
-      android:layout_width="match_parent"
-      android:layout_height="wrap_content"
-      android:layout_margin="8dp"
-      android:inputType="textCapWords"
-      android:hint="Nome" />
-  
-    <EditText android:id="@+id/activity_form_student_phone"
-      android:layout_width="match_parent"
-      android:layout_height="wrap_content"
-      android:layout_margin="8dp"
-      android:inputType="phone"
-      android:hint="Telefone" />
-  
-    <EditText android:id="@+id/activity_form_student_email"
-      android:layout_width="match_parent"
-      android:layout_height="wrap_content"
-      android:layout_margin="8dp"
-      android:inputType="textEmailAddress"
-      android:hint="E-mail" />
-  
-  <Button android:id="@+id/activity_form_student_button_save"
-    android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:text="Salvar"
-    android:layout_margin="8dp"/>
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+  android:layout_width="match_parent"
+  android:layout_height="wrap_content">
 
-</LinearLayout>
+  <LinearLayout android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    android:orientation="vertical">
+
+    <EditText
+      android:id="@+id/activity_form_student_name"
+      android:layout_width="match_parent"
+      android:layout_height="wrap_content"
+      android:layout_margin="8dp"
+      android:hint="Nome"
+      android:inputType="textCapWords" />
+
+    <EditText
+      android:id="@+id/activity_form_student_phone"
+      android:layout_width="match_parent"
+      android:layout_height="wrap_content"
+      android:layout_margin="8dp"
+      android:hint="Telefone"
+      android:inputType="phone" />
+
+    <EditText
+      android:id="@+id/activity_form_student_email"
+      android:layout_width="match_parent"
+      android:layout_height="wrap_content"
+      android:layout_margin="8dp"
+      android:hint="E-mail"
+      android:inputType="textEmailAddress" />
+
+  </LinearLayout>
+</ScrollView>
