--- a/formacoes/android/Agenda/app/src/main/res/layout/activity_list_students.xml
+++ b/formacoes/android/Agenda/app/src/main/res/layout/activity_list_students.xml
@@ -23,9 +23,6 @@
     android:layout_marginEnd="16dp"
     android:layout_marginBottom="16dp"
     android:clickable="true"
-    android:src="@drawable/ic_action_add_student"
-    app:backgroundTint="@color/design_default_color_primary"
-    app:fabSize="normal"
-    app:rippleColor="#FFFFFF" />
+    android:src="@drawable/ic_action_add_student" />
 
 </RelativeLayout>
