--- a/formacoes/android/Agenda/app/src/main/res/menu/activity_list_students_menu.xml
+++ b/formacoes/android/Agenda/app/src/main/res/menu/activity_list_students_menu.xml
@@ -2,5 +2,5 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
   <item
     android:id="@+id/activity_list_students_remove"
-    android:title="Remover" />
+    android:title="@string/activity_list_students_menu_remove" />
 </menu>
